deprecated/manifests/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak-app
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - keycloak.local
    secretName: keycloak-tls
  rules:
  - host: keycloak.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
